# obsidian-task-automation

./: .gitignore  README.md  claude.md  pyproject.toml
docs/: mvp-specification.md  step-by-step.md
src/obs_tasks/: __init__.py  cli.py  config.py  executor.py  models.py  parser.py  state.py  writer.py
tests/: conftest.py  test_cli.py  test_executor.py  test_integration.py  test_models.py  test_parser.py  test_state.py  test_writer.py
